--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.5.0",
   "dependencies": {
     "axios": "^1.6.2",
-    "crypto-web": "github:trueshura/crypto-web",
+    "crypto-web": "github:SilentNotaryEcosystem/Crypto-web",
     "protobufjs": "^7.2.5"
   },
   "devDependencies": {
